After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 706028 - The pathbar in GTKFilechooser don't stick together
The pathbar in GTKFilechooser don't stick together
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
3.9.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-08-14 21:35 UTC by Andreas Nilsson
Modified: 2013-08-20 00:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
this is how it looks in 3.8 (99.81 KB, image/png)
2013-08-14 21:38 UTC, Andreas Nilsson
  Details
this is how it looks in master (56.37 KB, image/png)
2013-08-14 21:39 UTC, Andreas Nilsson
  Details
pathbar: add back GTK_STYLE_CLASS_LINKED (1.19 KB, patch)
2013-08-16 16:54 UTC, Cosimo Cecchi
committed Details | Review

Description Andreas Nilsson 2013-08-14 21:35:35 UTC
The pathbar in the the file chooser don't have a nice pathbar look to it in master. This looks all right in 3.8 and it looks like it should in Nautilus master.
Comment 1 Andreas Nilsson 2013-08-14 21:38:50 UTC
Created attachment 251659 [details]
this is how it looks in 3.8
Comment 2 Andreas Nilsson 2013-08-14 21:39:15 UTC
Created attachment 251660 [details]
this is how it looks in master
Comment 3 Cosimo Cecchi 2013-08-16 16:54:33 UTC
-> gtk+

This is a GTK+ regression from https://git.gnome.org/browse/gtk+/commit/?id=42f53ab58e3f905b242029c2ea446d79d2113725 - the LINKED style class was accidentally removed.
Comment 4 Cosimo Cecchi 2013-08-16 16:54:59 UTC
Created attachment 251915 [details] [review]
pathbar: add back GTK_STYLE_CLASS_LINKED

This was accidentally removed in commit
42f53ab58e3f905b242029c2ea446d79d2113725
Comment 5 Federico Mena Quintero 2013-08-16 17:42:40 UTC
Thanks; go ahead and commit!
Comment 6 Cosimo Cecchi 2013-08-20 00:47:26 UTC
Attachment 251915 [details] pushed as 844dade - pathbar: add back GTK_STYLE_CLASS_LINKED