pathbar: add back GTK_STYLE_CLASS_LINKED

This was accidentally removed in commit
42f53ab58e3f905b242029c2ea446d79d2113725

https://bugzilla.gnome.org/show_bug.cgi?id=706028